[package]
name = "DiskScrutiny"
version = "0.1.0"
edition = "2024"

[dependencies]
copypasta = "0.10.2"
glium = { version = "0.34.0", default-features = true }
imgui = { path = "imgui_backend/imgui", features = ["docking"] }
imgui-glium-renderer = { path = "imgui_backend/imgui-glium-renderer"}
imgui-winit-support = { path = "imgui_backend/imgui-winit-support" }
ntfs = "0.4.0"
rfd = "0.17.2"
walkdir = "2.5.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Storage_FileSystem", "Win32_Foundation", "Win32_System_IO"] }
